--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -21,7 +21,7 @@ jobs:
                   pip install jinja2 Pygments
             - name: prepare
               run: |
-                  make prepare
+                  rm -r build && mkdir build && cd build
             - name: configure
               run: |
                   cmake -H. -Bbuild -G "Unix Makefiles" -DCMAKE_BUILD_TYPE="Debug"
