--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ set(DOXYFILE ${CMAKE_SOURCE_DIR}/Doxyfile)
 if (DOXYGEN_FOUND)
     add_custom_target(docs
         COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYFILE}
-        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/docs/
+        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/docs/
         COMMENT "Generating HTML documentation with Doxygen"
     )
     message("DIrectory " ${CMAKE_CURRENT_SOURCE_DIR}/docs/)
